The main page for the site has been made, which is fully adaptive for all screen resolutions and uses the parallax effect, made it possible to send an email to the user’s mail with a link with which the user will be able to create a new password for the account in the future, changed the site structure and project architecture

--- a/1client/src/assets/scss/DashboardPage.css
+++ b/1client/src/assets/scss/DashboardPage.css
@@ -42,16 +42,12 @@
   margin-bottom: 6px;
 }
 
-.Donating__information-block.first-block {
-  background-color: #4caf50;
+.Donating__information-block.user-block {
+  background-color: #2D2D2D;
 }
 
-.Donating__information-block.second-block {
-  background-color: #9c27b0;
-}
-
-.Donating__information-block.third-block {
-  background-color: #607d8b;
+.Donating__information-block.all-block {
+  background-color: #9DA24D;
 }
 
 .Donating__block-headline,
